# nfctl

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: publish.yml  release-please.yml  test.yml
nfctl/: client.py  config.py  main.py  output.py
nfctl/commands/: config_cmd.py  pipeline.py  query.py  workflow.py
skills/nfctl/: SKILL.md
skills/nfctl-batch/: SKILL.md
skills/nfctl-shared/: SKILL.md
skills/nfctl-workflow/: SKILL.md
skills/nfctl-workflow/references/: nfctl-cancel.md  nfctl-delete.md  nfctl-list.md  nfctl-log.md  nfctl-overview.md  nfctl-pipeline-list.md  nfctl-resources.md  nfctl-status.md  nfctl-submit.md  nfctl-task.md  nfctl-tasks.md  nfctl-validate.md
skills/nfctl/references/: resources.md  submit.md
tests/: conftest.py  test_cli.py
