[project]
name = "nfctl"
version = "0.5.0"
description = "nf-server CLI — 面向生信工程师和 AI Agent 的命令行工具"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
authors = [
    { name = "huangzhibo" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.12.0,<1.0.0",
    "rich>=13.0.0,<15.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.scripts]
nfctl = "nfctl.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nfctl"]

[dependency-groups]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "ruff>=0.14.0,<0.16.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long
    "B008",  # function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
]
